--- a/Android/WMessage/myapplication/src/main/res/layout/round_activity_main.xml
+++ b/Android/WMessage/myapplication/src/main/res/layout/round_activity_main.xml
@@ -6,11 +6,8 @@
                 tools:context="com.bbk.zyj.myapplication.MainActivity"
                 tools:deviceIds="wear_round">
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_round"/>
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ListView>
 </RelativeLayout>
