--- a/Android/WMessage/myapplication/src/main/res/layout/activity_binding.xml
+++ b/Android/WMessage/myapplication/src/main/res/layout/activity_binding.xml
@@ -10,16 +10,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.bbk.zyj.myapplication.Binding">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_contact"
-        android:layout_marginTop="6dp"
-        android:layout_marginLeft="8dp"
-        android:gravity="center"
-        android:text="@string/contact"
-        android:textSize="14sp"
-        android:textColor="#28d600"/>
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/tv_contact"-->
+        <!--android:layout_marginTop="6dp"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--android:gravity="center"-->
+        <!--android:text="@string/contact"-->
+        <!--android:textSize="14sp"-->
+        <!--android:textColor="#28d600"/>-->
 
     <ImageView
         android:layout_width="wrap_content"
