--- a/Android/WMessage/myapplication/src/main/res/layout/rect_activity_message_send.xml
+++ b/Android/WMessage/myapplication/src/main/res/layout/rect_activity_message_send.xml
@@ -40,8 +40,6 @@
     <ListView
         android:id="@+id/lv_send_message"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true">
-
+        android:layout_height="wrap_content">
     </ListView>
 </RelativeLayout>
