--- a/Android/WMessage/myapplication/src/main/res/layout/activity_message_edit.xml
+++ b/Android/WMessage/myapplication/src/main/res/layout/activity_message_edit.xml
@@ -10,12 +10,14 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/et_send"
             android:layout_width="120dp"
             android:layout_height="35dp"
             style="?android:attr/textViewStyle"
             android:background="@null"/>
 
         <Button
+            android:id="@+id/btn_send"
             android:layout_width="60dp"
             android:layout_height="35dp"
             android:layout_marginRight="2dp"
