--- a/Android/PhoneMessage/app/src/main/res/layout/textview.xml
+++ b/Android/PhoneMessage/app/src/main/res/layout/textview.xml
@@ -10,7 +10,7 @@
               android:layout_marginRight="2dp"
               android:layout_marginBottom="4dp">
 
-    <com.zyj.phonemessage.roundimageview.RoundedImageView
+    <com.zyj.phonemessage.roundedimageview.RoundedImageView
         android:id="@+id/roundedimageview"
         android:layout_width="35dp"
         android:layout_height="35dp"
