--- a/Android/AlertDialog/app/src/main/res/layout/activity_main.xml
+++ b/Android/AlertDialog/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,9 @@
         android:text="选择对话框"
         android:id="@+id/button"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -53,4 +52,5 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
+
 </RelativeLayout>
